Fix visual bugs with bingo cards
* Fix bug where on some browsers (including mobile Microsoft Edge for
  Android) when a marker was removed, parts of the marker table would
  shift upwards and the borders would become visible
* Fix bug where FREE SPACE text is way too big and overflows the cell

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -85,14 +85,22 @@ th {
     cursor: pointer;
 }
 
-td.marker.selected div {
+td.marker div {
     width: 90%;
     height: 90%;
     margin: auto;
     background-color: red;
-    opacity: 0.75;
+    opacity: 0;
     border-color: white;
     border-radius: 100%;
+}
+
+td.free-space {
+    font-size: 0.45em;
+}
+
+td.marker.selected div {
+    opacity: 0.75;
 }
 
 span.error {
